<resources>
    <string name="app_name">Hourly Reminder</string>
    <string name="action_settings">Settings</string>
    <string-array name="hour_default" translatable="false">
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="hour_values" translatable="false">
        <item name="00">00</item>
        <item name="01">01</item>
        <item name="02">02</item>
        <item name="03">03</item>
        <item name="04">04</item>
        <item name="05">05</item>
        <item name="06">06</item>
        <item name="07">07</item>
        <item name="08">08</item>
        <item name="09">09</item>
        <item name="10">10</item>
        <item name="11">11</item>
        <item name="12">12</item>
        <item name="13">13</item>
        <item name="14">14</item>
        <item name="15">15</item>
        <item name="16">16</item>
        <item name="17">17</item>
        <item name="18">18</item>
        <item name="19">19</item>
        <item name="20">20</item>
        <item name="21">21</item>
        <item name="22">22</item>
        <item name="23">23</item>
    </string-array>
    <string-array name="weekdays_text">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
    <string-array name="weekdays_values" translatable="false">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
    <string-array name="empty" />
    <string-array name="custom_sound_text">
        <item>Off</item>
        <item>Ringtone Type</item>
        <item>Sound File Type</item>
    </string-array>
    <string-array name="custom_sound_values" translatable="false">
        <item>off</item>
        <item>ringtone</item>
        <item>sound</item>
    </string-array>
    <string-array name="increasing_volume_text">
        <item>Off</item>
        <item>1 sec</item>
        <item>2 sec</item>
        <item>3 sec</item>
        <item>4 sec</item>
        <item>5 sec</item>
    </string-array>
    <string-array name="increasing_volume_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="snooze_after_text">
        <item>Off</item>
        <item>1 sec</item>
        <item>3 sec</item>
        <item>5 sec</item>
        <item>30 sec</item>
        <item>1 min</item>
        <item>5 min</item>
    </string-array>
    <string-array name="snooze_after_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>30</item>
        <item>60</item>
        <item>300</item>
    </string-array>
    <string-array name="snooze_text">
        <item>1 min</item>
        <item>5 min</item>
        <item>10 min</item>
        <item>15 min</item>
        <item>20 min</item>
    </string-array>
    <string-array name="snooze_values" translatable="false">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>
    <string name="system">System Language</string>
    <string-array name="languages_text" translatable="false">
        <item>@string/system</item>
        <item>English</item>
        <item>Español</item>
        <item>Русский</item>
    </string-array>
    <string-array name="languages_values" translatable="false">
        <item></item>
        <item>en</item>
        <item>es</item>
        <item>ru</item>
    </string-array>
    <string-array name="patterns_text">
        <item>Single</item>
        <item>Beat-Beat</item>
        <item>Long-Beat</item>
    </string-array>
    <string-array name="patterns_values" translatable="false">
        <item>v:400,s:1000</item>
        <item>v:200,s:100,v:200,s:500,v:200,s:100,v:200,s:1000</item>
        <item>v:1000,s:100,v:200,s:100,v:200,s:1000</item>
    </string-array>
    <string name="HourlyReminders">Hourly Reminders</string>
    <string name="CustomAlarms">Custom Alarms</string>
    <string name="WaitTTS">Waiting for TTS</string>
    <string name="FailedTTS">Failed TTS again, skiping</string>
    <string name="FailedTTSRestar">Failed TTS again, restarting</string>
    <string name="NoDefaultRingtone">No default ringtone</string>
    <string name="DefaultRingtone">Default ringtone</string>
    <string name="SoundSilenced">(Sound Silenced)</string>
    <string name="SoundSilencedVibrate">(Sound Silenced) - Vibrate</string>
    <string name="SoundSilencedCall">(Sound Silenced) - Call</string>
    <string name="SoundSilencedMusic">(Sound Silenced) - Music</string>
    <string name="SoundSilencedSettings">(Sound Silenced) - Settings</string>
    <string name="ToastTime">Time is %1$s</string>
    <string name="once">Once</string>
    <string name="Everyday">Everyday</string>
    <string name="Weekdays">Weekdays</string>
    <string name="DaysOfWeek">Weekdays</string>
    <string name="Weekend">Weekend</string>
    <string name="Today">Today</string>
    <string name="Tomorrow">Tomorrow</string>
    <string name="WEEK_MON">Mon</string>
    <string name="WEEK_TUE">Tue</string>
    <string name="WEEK_WED">Wed</string>
    <string name="WEEK_THU">Thu</string>
    <string name="WEEK_FRI">Fri</string>
    <string name="WEEK_SAT">Sat</string>
    <string name="WEEK_SUN">Sun</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="title_activity_settings">Settings</string>
    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <string name="hours">Hours</string>
    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <string name="alarm_set_for">Alarm set for %s from now!</string>
    <string name="alarm_disabled">Alarm is disabled</string>
    <string name="hour_symbol">h</string>
    <string name="min_symbol">m</string>
    <string-array name="themes_text">
        <item>Theme White</item>
        <item>Theme Dark</item>
    </string-array>
    <string-array name="themes_values" translatable="false">
        <item>@string/Theme_Light</item>
        <item>@string/Theme_Dark</item>
    </string-array>
    <string-array name="weekstart_text">
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
    </string-array>
    <string-array name="weekstart_values" translatable="false">
        <item>Sat</item>
        <item>Sun</item>
        <item>Mon</item>
    </string-array>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="SelectAlarm">Select Alarm</string>
    <string name="Reminder">Reminder</string>
    <string name="Reminders15">Set reminders repeat 15 min, check \'reminders\'.</string>
    <string name="UpcomingAlarm">Upcoming alarm…</string>
    <string name="UpcomingChime">Upcoming chime…</string>
    <string name="Cancel">Cancel</string>
    <string name="Alarm">Alarm</string>
    <string name="AlarmMissed">Alarm missed</string>
    <string name="AlarmMissedAfter">Alarm %1$s dismissed after %2$d mins</string>
    <string name="AlarmMissedConflict">Alarm %1$s dismissed due to conflict with next alarm</string>
    <string name="dismiss_alarm">Dismiss Alarm</string>
    <string name="day_pm">PM</string>
    <string name="day_am">AM</string>
    <string name="day_pm_full">PM</string>
    <string name="day_am_full">AM</string>
    <string name="day_4_pm">PM</string>
    <string name="day_4_am">AM</string>
    <string name="day_4_night">AM</string>
    <string name="day_4_mid">PM</string>
    <string name="beep">Beep</string>
    <string name="speech">Speech</string>
    <string name="ringtone">Ringtone</string>
    <string name="browse_sdcard">Browse sdcard</string>
    <string name="active_alarm">Active Alarm!</string>
    <string name="dismiss">Dismiss</string>
    <string name="not_selected">(not selected)</string>
    <string name="alarm_type_alarm">Setting \'Exact Time\' on, check settings.</string>
    <string name="reminders_vibrate">Reminders set to vibrate only</string>
    <string name="reminders_silence">Reminders set to \'silence\'</string>
    <string name="speak_time_12h00" formatted="false">%H o\'clock</string>
    <string name="speak_time_12h01" formatted="false">Time is %H %M %A</string>
    <string name="speak_time_24h00" formatted="false">%H hundred hours</string>
    <string name="speak_time_24h01" formatted="false">Time is %H %M</string>
    <string name="reset">Reset</string>
    <string name="pref_volume_title">Reduce Volume</string>
    <string name="pref_volume_summary">Set text speech volume</string>
    <string name="pref_beep_title">Custom Beep</string>
    <string name="pref_beep_summary">Customize beep sound</string>
    <string name="pref_callsilence_title">Silence During Calls</string>
    <string name="pref_callsilence_summary">Do not play sounds during calls</string>
    <string name="pref_musicsilence_title">Silence During Music</string>
    <string name="pref_musicsilence_summary">Do not play sounds while listening music</string>
    <string name="pref_phonesilence_title">Low Sound Profile</string>
    <string name="pref_phonesilnece_summary">Do not play sounds while phone in silence or vibrate mode. Switch to ringtone sound channel (default is alarm channel)</string>
    <string name="pref_vibrate_title">Vibrate</string>
    <string name="pref_vibrate_summary">Vibrate while sounding an reminder / alarm</string>
    <string name="pref_wakeup_title">Wake Up Screen</string>
    <string name="pref_wakeup_summary">Wake up screen on reminders</string>
    <string name="pref_alarm_title">Exact on Time</string>
    <string name="pref_alarm_summary">Use \'alarm\' event type for hourly chimes (wakeup phone from power saving mode)</string>
    <string name="pref_increasingvolume_title">Increasing Alarm Volume</string>
    <string name="pref_increasingvolume_summary">Set Increasing Alarm Volume</string>
    <string name="pref_snooze_title">Alarm Snooze after...</string>
    <string name="pref_snooze_summary">Set snooze time after minutes</string>
    <string name="pref_snoozetime_title">Alarm Snooze minutes...</string>
    <string name="pref_snoozetime_summary">Set snooze time minutes</string>
    <string name="pref_tts_title">TTS language</string>
    <string name="pref_tts_summary">Set Text-To-Speech Language</string>
    <string name="pref_ttsampm_title">Speak AM/PM</string>
    <string name="pref_ttsampm_summary">Will speak time including AM/PM suffix</string>
    <string name="pref_optimization_title">Disable Battery Optimization</string>
    <string name="pref_optimization_summary">Prevent app to be removed from memory</string>
    <string name="pref_notifications_title">Notifications</string>
    <string name="pref_notifications_summary">Show notifications</string>
    <string name="pref_theme_title">Application Theme</string>
    <string name="pref_theme_summary">Set application theme (dark / light)</string>
    <string name="pref_weekstart_title">Start Week On</string>
    <string name="pref_weekstart_summary">Start week on specified day</string>
</resources>