<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.AlarmsFragment">

    <LinearLayout
        android:id="@+id/alarm_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/appbar_padding_top">

        <com.github.axet.androidlibrary.widgets.EqualLinearLayout
            android:id="@+id/alarm_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/alarm_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="09:00"
                    android:textSize="60dp" />

                <TextView
                    android:id="@+id/alarm_am"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/alarm_time"
                    android:layout_toRightOf="@id/alarm_time"
                    android:text="@string/day_am"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/alarm_pm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/alarm_time"
                    android:layout_toRightOf="@id/alarm_time"
                    android:text="@string/day_pm"
                    android:textSize="25dp"
                    android:visibility="gone" />
            </RelativeLayout>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/alarm_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </com.github.axet.androidlibrary.widgets.EqualLinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/alarm_detailed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <CheckBox
                                android:id="@+id/alarm_week_days"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/DaysOfWeek" />

                            <TextView
                                android:id="@+id/alarm_week_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:text="@string/Everyday" />
                        </LinearLayout>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.github.axet.androidlibrary.widgets.SquareLinearLayout
                                android:id="@+id/alarm_week"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="horizontal"
                                app:maxChild="60dp">

                                <com.github.axet.hourlyreminder.widgets.RoundCheckbox
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:checked="true"
                                    android:text="@string/monday" />

                                <com.github.axet.hourlyreminder.widgets.RoundCheckbox
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:text="@string/tuesday" />

                                <com.github.axet.hourlyreminder.widgets.RoundCheckbox
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:text="@string/wednesday" />

                                <com.github.axet.hourlyreminder.widgets.RoundCheckbox
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:text="@string/thursday" />

                                <com.github.axet.hourlyreminder.widgets.RoundCheckbox
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:text="@string/friday" />

                                <com.github.axet.hourlyreminder.widgets.RoundCheckbox
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:text="@string/saturday" />

                                <com.github.axet.hourlyreminder.widgets.RoundCheckbox
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:text="@string/sunday" />
                            </com.github.axet.androidlibrary.widgets.SquareLinearLayout>
                        </FrameLayout>
                    </LinearLayout>

                    <com.github.axet.androidlibrary.widgets.EqualLinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/alarm_beep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/beep" />

                        <CheckBox
                            android:id="@+id/alarm_speech"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/speech" />

                        <CheckBox
                            android:id="@+id/alarm_ringtone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ringtone" />
                    </com.github.axet.androidlibrary.widgets.EqualLinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.github.axet.androidlibrary.widgets.EqualLinearLayout
                            android:id="@+id/alarm_ringtone_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/alarm_ringtone_value_box"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp"
                                android:layout_weight="1"
                                android:background="?attr/round_corners"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/alarm_ringtone_play"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:padding="5dp"
                                    android:src="@drawable/ic_launcher_notification"
                                    android:tint="?attr/colorAccent" />

                                <com.github.axet.androidlibrary.widgets.PathMax
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:paddingRight="5dp">

                                    <TextView
                                        android:id="@+id/alarm_ringtone_value"
                                        android:layout_width="wrap_content"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1"
                                        android:gravity="center_vertical"
                                        android:text="@string/DefaultRingtone" />
                                </com.github.axet.androidlibrary.widgets.PathMax>
                            </LinearLayout>

                            <TextView
                                android:id="@+id/alarm_ringtone_browse"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:background="?attr/round_corners"
                                android:gravity="center"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:text="@string/browse_sdcard" />
                        </com.github.axet.androidlibrary.widgets.EqualLinearLayout>
                    </FrameLayout>
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/alarm_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/alarm_bottom_first"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/alarm_trash"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:src="@drawable/trash"
                            android:tint="?attr/colorAccent" />

                        <View
                            android:layout_width="15dp"
                            android:layout_height="0dp" />

                        <ImageButton
                            android:id="@+id/alarm_rename"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_edit_black_24dp"
                            android:tint="?attr/colorAccent" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/alarm_compact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/alarm_compact_first"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Tomorrow"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/alarm_expand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:background="@android:color/transparent"
                    android:padding="5dp"
                    android:src="@drawable/ic_expand_more_black_24dp"
                    android:tint="?attr/colorAccent" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
